<resources>
    <string name="app_name">PetsApplication</string>
    <string name="common_error">Unexpected Error, Please try again</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="reenter_your_password">Re-enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="password_constraint">Password should at least 6 digits</string>
    <string name="repeat_password_constraint">The repeated password is wrong</string>
    <string name="sign_up_success">Account created. Please login using your account.</string>
    <string name="search_text">Search for your favourite pets</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="pets">Pets</string>
    <string name="adopt_now">Adopt Now!</string>
    <string name="favourite_pets">Favourite Pets</string>
    <string name="pet_details">Pet Details</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="explore_now">Explore now</string>
    <string name="no_favourite_pet">No Favourite Pet Added Yet!</string>
    <string name="pet_added_to_favourite">Pet Added to Favourite</string>
    <string name="remove_from_favourite">Remove from favourite</string>
    <string name="profile">Profile</string>
    <string name="please_sign_in">Please sign in to your account</string>
    <string name="avatar_image">Avatar image</string>
    <string name="print">print</string>
    <string name="post_a_pet">Post a pet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="done">Done</string>
    <string name="your_name">Your Name</string>
    <string name="your_age">Your Age</string>
    <string name="invalid_name">Invalid name. Name should at least 3 characters</string>
    <string name="invalid_age">Invalid Age</string>
    <string name="posting">Posting</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="weight">Weight(KG)</string>
    <string name="description">Description</string>
    <string name="invalid_weight">Invalid weight</string>
    <string name="invalid_breed">Invalid breed</string>
    <string name="invalid_description">Please provide more description for your pet</string>
    <string name="invalid_pet_photo">Please select a photo for your pet</string>
    <string name="sign_out">Sign out</string>
    <string name="messages">Messages</string>
    <string name="chat">Chat</string>
    <string name="you_are_the_owner">This pet is posted by you. You\'re unable to adopt this pet.</string>
    <string name="register_caption">Enter your account details, and let’s find your favourite pets!</string>
    <string name="no_pets_found">No pets found...</string>
    <string name="chat_message_error">You can\'t send empty message</string>
    <string name="reset_password_success">Your password has been reset.</string>
    <string name="allow_precise_location">Allow precise location</string>
    <string name="request_permission">Request permissions</string>
    <string name="location_permission_message">Getting your exact location is important for this app. Please grant us fine location. Thank you :D</string>
    <string name="first_time_location_permission">This app requires location permission</string>
</resources>